Revert "Buttons fonts and alignment fixes"
This reverts commit d91dab5a66b540b612121afd02b0e2cce686a345.

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ h1 {
     /* or 148px */
 
     color: #2B647A;
-    margin:0px;
 }
 
 h2 {
@@ -109,7 +108,8 @@ html {
 .wheelSVG {
    position: relative;
     overflow: visible;
-    height: 61vh;}
+    height: 75vh;
+}
 
 .wheelText {
     text-anchor: start;
@@ -165,11 +165,11 @@ button {
     font-weight: 700;
     font-size: 2rem;
     color: #ededed;
-    border-radius: 86px;
+    border-radius: 6px;
     border: none;
     box-shadow: 0 2px 0 #D71559;
     cursor: pointer;
-    font-family: 'Avenir';
+    font-family: Montserrat, sans-serif;
 }
 
 @media only screen and (max-width: 480px) {
